--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^5.11.1",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.2",
     "next": "^14.0.2",
     "react": "^18.2.0",
